News for the tz database


Unreleased, experimental changes

  Changes affecting near-future time stamps

    Crimea switches to Moscow time on 2014-03-30 at 02:00 local time.
    (Thanks to Alexander Krivenyshev.)  Move its zone.tab entry from UA to RU.

  Changes affecting 'zic'

    'zic' now is smarter about allocating memory.
    (Thanks to Andrew Main (Zefram).)

  Changes affecting commentary and documentation

    Fix Tuesday/Thursday typo in description of time in Israel.
    (Thanks to Bert Katz via Pavel Kharitonov and Mike Frysinger.)

    Microsoft Windows 8.1 doesn't support tz database names.  (Thanks
    to Donald MacQueen.)  Instead, the Microsoft Windows Store app
    library supports them.

    Add comments about Johnston Island time in the 1960s.
    (Thanks to Lyle McElhaney.)

    Morocco's 2014 DST start will be as predicted.
    (Thanks to Sebastien Willemijns.)

Release 2014a - 2014-03-07 23:30:29 -0800

  Changes affecting near-future time stamps

    Turkey begins DST on 2014-03-31, not 03-30.  (Thanks to Faruk Pasin for
    the heads-up, and to Tim Parenti for simplifying the update.)

  Changes affecting past time stamps

    Fiji ended DST on 2014-01-19 at 02:00, not the previously-scheduled 03:00.
    (Thanks to Steffen Thorsen.)

    Ukraine switched from Moscow to Eastern European time on 1990-07-01
    (not 1992-01-01), and observed DST during the entire next winter.
    (Thanks to Vladimir in Moscow via Alois Treindl.)

    In 1988 Israel observed DST from 04-10 to 09-04, not 04-09 to 09-03.
    (Thanks to Avigdor Finkelstein.)

  Changes affecting code

    A uninitialized-storage bug in 'localtime' has been fixed.
    (Thanks to Logan Chien.)

  Changes affecting the build procedure

    The settings for 'make check_web' now default to Ubuntu 13.10.

  Changes affecting commentary and documentation

    The boundary of the US Pacific time zone is given more accurately.
    (Thanks to Alan Mintz.)
